--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@ $ git gc --prune=now --aggressive
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script>
-$.ajax({ dataType: "jsonp",
+
+$.ajax({ dataType: "jsonp", timeout: 2,
   url: 'http://search.maven.org/solrsearch/select/?q=g:"com.madgag"+AND+a:"bfg-repo-cleaner"&wt=json&json.wrf=?&indent=true'
 }).done(function ( data ) {
     var v = data.response.docs[0].latestVersion;
@@ -95,6 +96,7 @@ $.ajax({ dataType: "jsonp",
     $('.latest-version').text('v' + v);
     $('.latest-download-link').prop("href", u);
 });
+
 </script>
   </body>
 </html>
