--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@ $ git gc --prune=now --aggressive
 </code></pre>
 <p>Finally, once you're happy with the updated state of your repo, push it back up:</p>
 <pre><code>$ git push --mirror
+<p>At this point, you</p>
 </code></pre>
 
 <h1>Requirements</h1>
 <ul>
-<li>Java 6 or above</li>
+<li>The <a href="http://java.com/en/download/manual.jsp">Java Runtime Environment</a> (JRE 6.0 or above)</li>
 </ul>
 <p>That's it - the Scala library and all other dependencies are folded into the <a class="latest-download-link" href="#download">downloadable jar</a>.</p>
 
