--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <p>The <code>git-filter-branch</code> command is enormously powerful and can do things that the BFG can't - but the BFG is <em>much</em> better for the tasks above, because:</p>
 
 <ul>
-<li>Faster : <strong>10 - 50x</strong> faster</li>
-<li>Simpler : The BFG isn't particularily clever, but <em>is</em> focused on making the above tasks easy</li>
+<li><a href="#speed">Faster</a> : <strong>10 - 50x</strong> faster</li>
+<li><a href="#examples">Simpler</a> : The BFG isn't particularily clever, but <em>is</em> focused on making the above tasks easy</li>
 <li>Beautiful : If you need to, you can use the beautiful Scala language to customise the BFG. Which has got to be better than Bash scripting at least some of the time.</li>
 </ul>
 
@@ -74,6 +74,15 @@ $ git gc --prune=now --aggressive
 <p>Replace all passwords (listed in a file 'passwords.txt') with <code>***REMOVED***</code> :</p>
 <pre><code>$ <a class="latest-download-link" href="#download">bfg</a> <strong>--replace-banned-strings passwords.txt</strong>  my-repo.git</code></pre>
 
+<h1 id="speed">Faster...</h1>
+<p>The BFG is 10 - 50x faster than <code>git-filter-branch</code>, turning an <em>overnight</em> job into one that takes <em>less than ten minutes</em>. BFG's performance advantage is due to these factors:</p>
+
+<ul>
+<li>The approach of <code>git-filter-branch</code> is to step through every commit in your repository, examining the complete file-structure of each one. For the intended use-cases of The BFG this is wasteful, as we don't care <em>where</em> in a file structure a 'bad' file exists - we just want it dealt with. Inherent in the nature of Git is that <em>every</em> file and folder is represented precisely once (and given a unique <a href="http://en.wikipedia.org/wiki/SHA-1">SHA-1</a> hash-id). The BFG takes advantage of this to process each and every file &amp; folder exactly <strong>once</strong> - no need for extra work.</li>
+<li>Taking advantage of the great support for parallelism in <a href="http://docs.scala-lang.org/overviews/parallel-collections/overview.html">Scala</a> and the JVM, the BFG does multi-core processing by default - the work of cleaning your Git repository is spread over every single core in your machine and typically consumes 100% of capacity for a substantial portion of the run.</li>
+<li>All action takes place in a single process (the process of the JVM), so doesn't require the frequent fork-and-exec-ing needed by <code>git-filter-branch</code>'s mix of Bash and C code.</li>
+</ul>
+
 <h1>Requirements</h1>
 <ul>
 <li>The <a href="http://java.com/en/download/manual.jsp">Java Runtime Environment</a> (JRE 6.0 or above)</li>
@@ -84,7 +93,7 @@ $ git gc --prune=now --aggressive
         </section>
 
         <aside id="sidebar">
-          <a id="download" class="button latest-download-link" href="http://repo1.maven.org/maven2/com/madgag/bfg-repo-cleaner/0.9.0/bfg-0.9.0.jar">
+          <a id="download" class="button latest-download-link" href="http://repo1.maven.org/maven2/com/madgag/bfg-repo-cleaner/0.11.0/bfg-0.11.0.jar">
             <small>Download</small>
             <span class="latest-version">.jar file</span>
           </a>
