Some feedback quotes... with a bit of editing

--- a/index.html
+++ b/index.html
@@ -109,6 +109,17 @@ ids <strong>will</strong> change, to reflect the changed history - only the SHA-
 <li>All action takes place in a single process (the process of the JVM), so doesn't require the frequent fork-and-exec-ing needed by <code>git-filter-branch</code>'s mix of Bash and C code.</li>
 </ul>
 
+<h1 id="feedback">Feedback from users</h1>
+<blockquote>
+I tried deleting using several "how to" blog entries for git filter-branch, but wasn't successful. Then tried The BFG; worked like a champ - very cool tool!
+<figcaption class="attribution">— <a href="http://linkedin.com/in/billh">Bill Hunt</a>, CTO at <a href="http://www.opttown.com/">OptTown</a></figcaption>
+</blockquote>
+&nbsp;
+<blockquote>
+The BFG was simple to set up and so fast that I had to ask Roberto, <em>"Is that it?"</em> and check for myself... it worked exactly as intended.
+<figcaption class="attribution">— <a href="https://github.com/ntoll">Nicholas Tollervey</a>, Developer at <a href="http://www.guardian.co.uk/">The Guardian<a></figcaption>
+</blockquote>
+
 <h1>Requirements</h1>
 <ul>
 <li>The <a href="http://java.com/en/download/manual.jsp">Java Runtime Environment</a> (JRE 6.0 or above)</li>
