--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ I tried deleting using several "how to" blog entries for git filter-branch, but 
 &nbsp;
 <blockquote>
 The BFG was simple to set up and so fast that I had to ask Roberto, <em>"Is that it?"</em> and check for myself... it worked exactly as intended.
-<figcaption class="attribution">— <a href="https://github.com/ntoll">Nicholas Tollervey</a>, Developer at <a href="http://www.guardian.co.uk/">The Guardian<a></figcaption>
+<figcaption class="attribution">— <a href="https://github.com/ntoll">Nicholas Tollervey</a>, Developer at <a href="http://www.guardian.co.uk/">The Guardian</a></figcaption>
 </blockquote>
 
 <h1>Requirements</h1>
@@ -131,6 +131,17 @@ The BFG was simple to set up and so fast that I had to ask Roberto, <em>"Is that
 </ul>
 <p>That's it - the Scala library and all other dependencies are folded into the <a class="latest-download-link" href="#download">downloadable jar</a>.</p>
 
+<h1>License</h1>
+
+<p>The BFG is free software: you can redistribute it and/or modify
+    it under the terms of the <a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a> as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.</p>
+
+<p>The BFG is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.</p>
 
         </section>
 
