Update with feedback from Jason Frey

--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@ I tried deleting using several "how to" blog entries for git filter-branch, but 
 </blockquote>
 &nbsp;
 <blockquote>
+I found The BFG Repo-Cleaner and ran it to clean up some large files, and was amazed by the performance.
+<figcaption class="attribution">— <a href="https://github.com/Fryguy">Jason Frey</a>, Software Engineer at <a href="http://www.redhat.com/">Red Hat</a></figcaption>
+</blockquote>
+&nbsp;
+<blockquote>
 The BFG was simple to set up and so fast that I had to ask Roberto, <em>"Is that it?"</em> and check for myself... it worked exactly as intended.
 <figcaption class="attribution">— <a href="https://github.com/ntoll">Nicholas Tollervey</a>, Developer at <a href="http://www.guardian.co.uk/">The Guardian</a></figcaption>
 </blockquote>
