--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-<pre><code>$ bfg --strip-blobs-bigger-than 1M --replace-banned-text banned.txt repo.git
+<pre><code>$ bfg --strip-blobs-bigger-than 1M --replace-text banned.txt repo.git
 </code></pre>
 
 <h1>an alternative to git-filter-branch</h1>
@@ -75,7 +75,7 @@ $ git gc --prune=now --aggressive
 <pre><code>$ bfg <strong>--strip-blobs-bigger-than 1M</strong>  my-repo.git</code></pre>
 
 <p>Replace all passwords listed in a file <em>(prefix lines 'regex:' or 'glob:' if required)</em> with <code>***REMOVED***</code> wherever they occur in your repository :</p>
-<pre><code>$ bfg <strong>--replace-banned-text passwords.txt</strong>  my-repo.git</code></pre>
+<pre><code>$ bfg <strong>--replace-text passwords.txt</strong>  my-repo.git</code></pre>
 
 
 <h1 id="protected-commits">Your <em>current</em> files are sacred...</h1>
