--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Roberto's creations (<a href="https://play.google.com/store/apps/details?id=com.
             <span class="latest-version">.jar file</span>
           </a>
 
-          <p class="repo-owner"><a href="https://github.com/rtyley/bfg-repo-cleaner">BFG Repo-Cleaner</a> is by <a href="https://github.com/rtyley">Roberto Tyley</a>, the author of <a href="https://play.google.com/store/apps/details?id=com.madgag.agit">Agit</a> - the Git Client for Android devices.</p>
+          <p class="repo-owner"><a href="https://github.com/rtyley/bfg-repo-cleaner">BFG Repo-Cleaner</a> is by <a href="https://github.com/rtyley">Roberto Tyley</a>, the author of <a href="https://play.google.com/store/apps/details?id=com.madgag.agit">Agit</a> - the Git Client for Android devices. <a href="https://plus.google.com/100348950724173674512?rel=author">Google+</a>, <a href="https://twitter.com/rtyley">Twitter</a></p>
           <p><a href="https://travis-ci.org/rtyley/bfg-repo-cleaner"><img src="https://travis-ci.org/rtyley/bfg-repo-cleaner.png" alt="Build Status"></a></p>
 
 <p><a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://github.com/rtyley/bfg-repo-cleaner"></a>
