Use updated personal G+ urls

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ The BFG was simple to set up and so fast that I had to ask Roberto, <em>"Is that
 &nbsp;
 <blockquote>
 Roberto's creations (<a href="https://play.google.com/store/apps/details?id=com.madgag.agit">Agit</a> and The BFG) are both very cool ;-)
-<figcaption class="attribution">— <a href="https://plus.google.com/108182106411180467879/posts/Lm7iBwSLvoo">Junio C Hamano</a>, <a href="http://kerneltrap.org/node/5496">Maintainer of Git</a></figcaption>
+<figcaption class="attribution">— <a href="https://plus.google.com/+JunioCHamano/posts/Lm7iBwSLvoo">Junio C Hamano</a>, <a href="http://kerneltrap.org/node/5496">Maintainer of Git</a></figcaption>
 </blockquote>
 <h1>Requirements</h1>
 <ul>
@@ -193,7 +193,7 @@ Roberto's creations (<a href="https://play.google.com/store/apps/details?id=com.
             <span class="latest-version">.jar file</span>
           </a>
 
-          <p class="repo-owner"><a href="https://github.com/rtyley/bfg-repo-cleaner">BFG Repo-Cleaner</a> is by <a href="https://github.com/rtyley">Roberto Tyley</a>, the author of <a href="https://play.google.com/store/apps/details?id=com.madgag.agit">Agit</a> - the Git Client for Android devices. <a href="https://plus.google.com/100348950724173674512?rel=author">Google+</a>, <a href="https://twitter.com/rtyley">Twitter</a></p>
+          <p class="repo-owner"><a href="https://github.com/rtyley/bfg-repo-cleaner">BFG Repo-Cleaner</a> is by <a href="https://github.com/rtyley">Roberto Tyley</a>, the author of <a href="https://play.google.com/store/apps/details?id=com.madgag.agit">Agit</a> - the Git Client for Android devices. <a href="https://plus.google.com/+RobertoTyley?rel=author">Google+</a>, <a href="https://twitter.com/rtyley">Twitter</a></p>
           <p><a href="https://travis-ci.org/rtyley/bfg-repo-cleaner"><img src="https://travis-ci.org/rtyley/bfg-repo-cleaner.png?branch=master" alt="Build Status"></a></p>
 
 <p><a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://github.com/rtyley/bfg-repo-cleaner"></a>
