--- a/index.html
+++ b/index.html
@@ -214,7 +214,9 @@ $.ajax({ dataType: "jsonp", timeout: 5000,
     var v = data.response.docs[0].latestVersion;
     var u = "http://repo1.maven.org/maven2/com/madgag/bfg/"+v+"/bfg-"+v+".jar"
     $('.latest-version').text('v' + v);
-    $('.latest-download-link').prop("href", u);
+    $('.latest-download-link').prop("href", u).click(function() {
+      ga('send', 'event', 'download-link', 'click', 'download');
+    });
 });
 
 </script>
