Tweak to get download-click analytics sent before page changes...?
https://www.domsammut.com/code/workaround-for-when-the-hitcallback-function-does-not-receive-a-response-analytics-js

http://stackoverflow.com/questions/17361992/google-analytics-events-canceled

--- a/index.html
+++ b/index.html
@@ -215,7 +215,14 @@ $.ajax({ dataType: "jsonp", timeout: 5000,
     var u = "http://repo1.maven.org/maven2/com/madgag/bfg/"+v+"/bfg-"+v+".jar"
     $('.latest-version').text('v' + v);
     $('.latest-download-link').prop("href", u).click(function() {
-      ga('send', 'event', 'download-link', 'click', 'download');
+      ga('send', 'event', {
+        'eventCategory' : 'download-link',
+        'eventAction' : 'click',
+        'eventLabel' : 'download',
+        'hitCallback' : function () {
+            document.location = href;
+        }
+      });
     });
 });
 
