For the click event to not trigger page load immediately...
...need to return false.

http://stackoverflow.com/a/20404011/438886

--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@ $.ajax({ dataType: "jsonp", timeout: 5000,
             document.location = href;
         }
       });
+      return false;
     });
 });
 
