--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ $.ajax({ dataType: "jsonp", timeout: 5000,
         'eventAction' : 'click',
         'eventLabel' : 'download',
         'hitCallback' : function () {
-            document.location = href;
+            document.location = u;
         }
       });
       return false;
