Add Elliot Glaysher's report on running against the chromium codebase
https://code.google.com/p/chromium/issues/detail?id=111570#c29

--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@ I found The BFG Repo-Cleaner and ran it to clean up some large files, and was am
 </blockquote>
 &nbsp;
 <blockquote>
+I was able to shrink the current repository down to ~500 megabytes in about 10 minutes when using this tool. My hand crafted scripts clock in at 615 megabytes in 3 days time for comparison.
+<figcaption class="attribution">— <a href="https://plus.google.com/+ElliotGlaysher">Elliot Glaysher</a>, Google Software Engineer on <a href="https://code.google.com/p/chromium/issues/detail?id=111570#c29">Google Chrome</a></figcaption>
+</blockquote>
+&nbsp;
+<blockquote>
 The BFG was simple to set up and so fast that I had to ask Roberto, <em>"Is that it?"</em> and check for myself... it worked exactly as intended.
 <figcaption class="attribution">— <a href="https://github.com/ntoll">Nicholas Tollervey</a>, Developer at <a href="http://www.guardian.co.uk/">The Guardian</a></figcaption>
 </blockquote>
