Attempt to guard against google-analytics failure on Download link
If Google-Analytics doesn't call the hitCallback, the Download link will
do nothing, which I guess is what happened here:

https://twitter.com/tamaslnagy/status/425104242794188800

Workaround taken from:

https://www.domsammut.com/code/workaround-for-when-the-hitcallback-function-does-not-receive-a-response-analytics-js

In a quick experiment using FireFox and AdBlockPlus v2.4.1, I wasn't able
to reproduce the issue, but there seems no harm in adding this guard
(possibly tamaslnagy has a different ad-blocker?).

--- a/index.html
+++ b/index.html
@@ -219,16 +219,19 @@ $.ajax({ dataType: "jsonp", timeout: 5000,
     var v = data.response.docs[0].latestVersion;
     var u = "http://repo1.maven.org/maven2/com/madgag/bfg/"+v+"/bfg-"+v+".jar"
     $('.latest-version').text('v' + v);
+
     $('.latest-download-link').prop("href", u).click(function() {
-      ga('send', 'event', {
-        'eventCategory' : 'download-link',
-        'eventAction' : 'click',
-        'eventLabel' : 'download',
-        'hitCallback' : function () {
-            document.location = u;
+        if (ga.hasOwnProperty('loaded') && ga.loaded === true) {
+            ga('send', 'event', {
+                'eventCategory' : 'download-link',
+                'eventAction' : 'click',
+                'eventLabel' : 'download',
+                'hitCallback' : function () {
+                    document.location = u;
+                }
+            });
+            return false;
         }
-      });
-      return false;
     });
 });
 
