Add curated Twitter feedback on The BFG
https://twitter.com/rtyley/timelines/464727264345993216

--- a/index.html
+++ b/index.html
@@ -165,6 +165,9 @@ The BFG was simple to set up and so fast that I had to ask Roberto, <em>"Is that
 Roberto's creations (<a href="https://play.google.com/store/apps/details?id=com.madgag.agit">Agit</a> and The BFG) are both very cool ;-)
 <figcaption class="attribution">— <a href="https://plus.google.com/+JunioCHamano/posts/Lm7iBwSLvoo">Junio C Hamano</a>, <a href="http://kerneltrap.org/node/5496">Maintainer of Git</a></figcaption>
 </blockquote>
+<p>
+   <strong>Also see more feedback on </strong><a href="https://twitter.com/rtyley/timelines/464727264345993216"><strong>Twitter...</strong></a>
+</p>
 <h1>Requirements</h1>
 <ul>
 <li>The <a href="http://java.com/en/download/manual.jsp">Java Runtime Environment</a> (JRE 6.0 or above)</li>
