Fix #59 Update BFG download link - old link format disabled by Sonatype
Thanks to @wereHamster for pointing this issue out and @JakeWharton for
pointing me to the new link format:

https://twitter.com/JakeWharton/status/540439217600360448

https://github.com/rtyley/bfg-repo-cleaner/issues/59

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Roberto's creations (<a href="https://play.google.com/store/apps/details?id=com.
         </section>
 
         <aside id="sidebar">
-          <a id="download" class="button latest-download-link" href="https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.madgag&a=bfg&v=LATEST">
+          <a id="download" class="button latest-download-link" href="https://search.maven.org/remote_content?g=com.madgag&a=bfg&v=LATEST">
             <small>Download</small>
             <span class="latest-version">.jar file</span>
           </a>
