Add example usage for removing unwanted '.git' paths
An effort to help users who have `.git` folders in their Git repos
(often due to migrating from Mercurial):

https://github.com/rtyley/bfg-repo-cleaner/issues/60#issuecomment-65919279
https://github.com/rtyley/bfg-repo-cleaner/issues/28#issuecomment-29587223

Some related StackOverflow questions from people afflicted by this
problem:

http://stackoverflow.com/questions/16821649/removing-git-directory-from-git-repo
http://stackoverflow.com/questions/22922187/git-remote-error-object-contains-git
http://stackoverflow.com/questions/20289896/migrating-from-kiln-to-github-git-errors-out-on-having-git-folder-in-history?
http://stackoverflow.com/questions/14728751/pushing-a-git-repo-fails-with-error-contains-git

--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@ $ git reflog expire --expire=now --all && git gc --prune=now --aggressive
 <p>Replace all passwords listed in a file <em>(prefix lines 'regex:' or 'glob:' if required)</em> with <code>***REMOVED***</code> wherever they occur in your repository :</p>
 <pre><code>$ bfg <strong>--replace-text passwords.txt</strong>  my-repo.git</code></pre>
 
+<p>Remove all folders or files named '.git' - a <a href="https://github.com/git/git/blob/d29e9c89d/fsck.c#L228-L229">reserved filename</a> in Git. These often
+  <a href="http://stackoverflow.com/q/16821649/438886">become a problem</a> when migrating to
+  Git from other source-control systems like Mercurial :</p>
+<pre><code>$ bfg <strong>--delete-folders .git --delete-files .git  --no-blob-protection</strong>  my-repo.git</code></pre>
+
 
 <h1 id="protected-commits">Your <em>current</em> files are sacred...</h1>
 
