Attempt to direct users to the HTTPS version of the site
https://konklone.com/post/github-pages-now-supports-https-so-use-it

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <title>BFG Repo-Cleaner by rtyley</title>
 
 <script type="text/javascript">
+if (("rtyley.github.io" == window.location.host) && (window.location.protocol != "https:"))
+    window.location.protocol = "https";
+
 /* <![CDATA[ */
     (function() {
         var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
