Some meta stuff...

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="referrer" content="origin">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="canonical" href="https://rtyley.github.io/bfg-repo-cleaner/" />
+    <meta name="description" content="A simpler, faster alternative to git-filter-branch for deleting big files and removing passwords from Git history.">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
